--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
         <a class="nav-link" href="#">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">POLITICS</a>
+        <a class="nav-link" href="#">NEWS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">WORLD</a>
+        <a class="nav-link" href="#">FEATURE</a>
       </li> 
 		<li class="nav-item">
-        <a class="nav-link" href="#">BUSINESS</a>
+        <a class="nav-link" href="#">EDITORIAL</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">EDITORIAL</a>
+        <a class="nav-link" href="#">SPORTS</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">TECHNOLOGY</a>
       </li> 
 		<li class="nav-item">
-        <a class="nav-link" href="#">SPORT</a>
+        <a class="nav-link" href="#">ENTERTAINMENT</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">FEATURE</a>
+        <a class="nav-link" href="#">BROADCAST</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">VIDEOS</a>
+        <a class="nav-link" href="#">ABOUT</a>
       </li> 
     </ul>
   </div> 
